--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,134 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  width: 1830px;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  background: url('https://source.unsplash.com/EwRM05V0VSI/1600x900');
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* header style */
+.header {
+  height: 100px;
+  background-color: rgb(241, 238, 236);
 }
+.cart-div {
+  float: right;
+  margin: 4px;
+  position: relative;
+}
+.cart-div img{
+  width: 50px;
+  margin-right: 30px;
+  border-radius: 50%;
+}
+.logo {
+    float: left;
+    margin: 0;
+    padding: 25px;
+}
+.search-box {
+  float: left;
+}
+.search-box input {
+  width: 124%;
+  float: left;
+  height: 40px;
+  border: 1px solid #ddd;
+  padding-left: 10px;
+  font-size: 15px;
+}
+.signup-btn {
+  float: right;
+}
+.profile-icon {
+  color: black;
+  font-size: 30px;
+  float: right;
+}
+.profile-image {
+  border-radius: 50%;
+}
+.add-btn {
+  float: left;
+}
+/* end header style */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* product UI */
+.product-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+.product-item {
+  border: 1px solid #ccc;
+  margin: 20px;
+  padding: 20px;
+}
+.product-item img:hover {
+  opacity: 0.7;
+  zoom: 1;
+}
+.search-icon {
+  float: left;
+  margin-top: 27px;
+  font-size: 22px;
+}
+/* end product UI */
+
+/* Cart UI start */
+.cart-page-container {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.cart-page-container table {
+  flex: 65%;
+  border-collapse: collapse;
+}
+.cart-page-container table td {
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+.price-details {
+  flex: 35%;
+  margin: 0px, 30px;
+}
+.price-details .adjust-price {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+}
+.price-details .adjust-price span {
+  font-size: 20px;
+}
+/* Cart Ui end */
+
+/* Register UI start */
+.register-form{
+  margin-top: 150px;
+  color: black;
+}
+/* Register Ui end */
+
+/* start Loader css */
+.loader-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #f8f8f8ad;
 }
 
-.App-link {
-  color: #61dafb;
+.loader-container .loader-img {
+  top: 30%;
+  left: 48%;
+  z-index: 1000;
+  position: absolute;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* End Loader css */
