--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,123 @@ body{
   height: 100%;
   margin: auto;
   padding: 0;
-  background: url('https://source.unsplash.com/EwRM05V0VSI/1600x900');
   
 }
 /* header style */
 .header {
   height: 100px;
   background-color: rgb(241, 238, 236);
+  letter-spacing: 0;
 }
+
+.header a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 4px;
+  letter-spacing: 4px;
+  float: left;
+}
+
+.header a:hover {
+  background: #03e9f4;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #202222,
+              0 0 25px #202222,
+              0 0 50px #202222,
+              0 0 100px #202222;
+}
+
+.header a span {
+  position: absolute;
+  display: block;
+}
+
+
+.header a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #2b2c2c);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%,100% {
+    left: 100%;
+  }
+}
+
+.header a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #222222);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,100% {
+    top: 100%;
+  }
+}
+
+.header a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #232424);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,100% {
+    right: 100%;
+  }
+}
+
+.header a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #1f2020);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
+
+
+
 .cart-div {
   float: right;
   margin: 4px;
@@ -43,6 +152,7 @@ body{
 }
 .signup-btn {
   float: right;
+  letter-spacing: 0px;
 }
 .profile-icon {
   color: black;
